// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should render 1`] = `
<div>
  <div
    class="relative"
    data-testid="dropdown__toggle"
  >
    <div
      class="float-right outline-none focus:outline-none"
    >
      <div
        class="sc-AxjAm buCJuk"
        height="20"
        width="20"
      >
        <svg>
          settings.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render toggle icon 1`] = `
<div>
  <div
    class="relative"
    data-testid="dropdown__toggle"
  >
    <div
      class="float-right outline-none focus:outline-none"
    >
      <div
        class="sc-AxjAm buCJuk"
        height="20"
        width="20"
      >
        <svg>
          settings.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render with custom toggle content as function 1`] = `
<div>
  <div
    class="relative"
    data-testid="dropdown__toggle"
  >
    <div>
      Dropdown is open: 
    </div>
  </div>
</div>
`;

exports[`Dropdown should render with custom toggle content as react element 1`] = `
<div>
  <div
    class="relative"
    data-testid="dropdown__toggle"
  >
    <div>
      custom toggle
    </div>
  </div>
</div>
`;

exports[`Dropdown should render with options 1`] = `
<div>
  <div
    class="relative"
    data-testid="dropdown__toggle"
  >
    <div
      class="float-right outline-none focus:outline-none"
    >
      <div
        class="sc-AxjAm buCJuk"
        height="20"
        width="20"
      >
        <svg>
          settings.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;
